--- a/overview.ipynb
+++ b/overview.ipynb
@@ -871,7 +871,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plots_1D.linearTheoryWaveProperties(info, save=True)"
+    "plots_1D.linearTheoryWaveProperties(info, save=False)"
    ]
   },
   {
